Fix bottom scrollbar appearing on .post hover

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,8 +6,7 @@
 }
 
 body {
-  // background: $color-green;
-  // overflow: hidden;
+  overflow-x: hidden;
 }
 
 .bg {
